# PlaneWar_Sever

./: .env  .gitignore  README.md  pyproject.toml
game/: __init__.py  background.py  bullet.py  enemy.py  main.py  network_client.py  player.py  powerup.py  progress.json  progress.py  settings.py  ui.py  utils.py
game/levels/: level_1.json  level_2.json  level_3.json  level_4.json
game/media/sounds/: Dynamedion GbR - 危险_SQ.flac
migrations/versions/: 845454af1341_ensure_score_model_has_level_column.py  c3c18341df31_initial_migration_for_user_and_score_.py
server/: __init__.py  api.py  app.py  auth.py  config.py  database.db  database.sqbpro  extensions.py  leaderboard_service.py  models.py  views.py
server/static/: style.css
server/templates/: base.html  game.html  leaderboard.html
server/templates/auth/: login.html  register.html
tests/game/: test_background.py  test_bullet.py  test_enemy.py  test_main.py  test_network_client.py  test_player.py  test_powerup.py  test_ui.py  test_utils.py
tests/server/: test_api.py  test_leaderboard_service.py  test_models.py  test_views.py
